Fix Form Wrap
Resizing screen caused labels to wrap around the screen without staying
next to the appropriate input. Labels and their inputs now wrap together
when screen is resized.

--- a/style.css
+++ b/style.css
@@ -48,9 +48,20 @@ body {
     width: 70%;
     height: 100vh;
     background-color: black;
+
+
+}
+
+form {
+    width: 90%;
+    margin: auto;
+    color: white;
+}
+
+.label-input-container {
+    display: inline-block;
 }
 
 button {
     background-color: #ffffcc;
-
 }
